objects/Component__c.object
<CustomObject>
    <fields>
        <fullName>AcceptanceDateFormula__c</fullName>
        <formula>Datevalue(AcceptanceDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>検収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcceptanceDate__c</fullName>
        <label>検収日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ComponentManageId__c</fullName>
        <externalId>true</externalId>
        <label>構成品_管理用ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delta_v5__c</fullName>
        <formula>CASE( ModelAbbreviation__c  
,&quot;NM-57162SCC1U&quot;,1
,&quot;NM-57161SCC1U&quot;,1 
,&quot;NM-57160SCC1U&quot;,1 
,&quot;NM-56070SP5&quot;,1 
,&quot;NM-56071SP5&quot;,1
,&quot;NM-56090SFU5&quot;,1
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delta_v5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemLink__c</fullName>
        <label>品目</label>
        <referenceTo>ProductItem__c</referenceTo>
        <relationshipLabel>構成品</relationshipLabel>
        <relationshipName>ItemLink_Component</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ItemName__c</fullName>
        <formula>ItemLink__r.JapaneseName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>品目名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>品目</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelAbbreviation__c</fullName>
        <label>機種略称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_ID__c</fullName>
        <externalId>true</externalId>
        <label>データ移行用ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentItem__c</fullName>
        <formula>UnitBody__r.Item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>親品目</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentSerialNo__c</fullName>
        <formula>UnitBody__r.SerialNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>親シリアル番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>位置</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Royal_Probe__c</fullName>
        <formula>CASE( ModelAbbreviation__c  
,&quot;NM-03810RO5&quot;,1
,&quot;NM-03811RO5S&quot;,1
,&quot;NM-03820RO5&quot;,1
,&quot;NM-03821RO5&quot;,1
,&quot;NM-03822RO5S&quot;,1
,&quot;NM-03830RO5&quot;,1
,&quot;NM-03821RO5S&quot;,1
,&quot;NM-03822RO5SS&quot;,1
,&quot;NM-03830RO5&quot;,1
,&quot;NM-03831RO5&quot;,1
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Royal プローブ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesAccountCode__c</fullName>
        <formula>SalesAccount__r.CustomerCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>販売先取引先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>構成品</relationshipLabel>
        <relationshipName>Component</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SerialNo__c</fullName>
        <label>シリアル番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingDateFormula__c</fullName>
        <formula>Datevalue(ShippingDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShippingDate__c</fullName>
        <label>出荷日（旧）</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <formula>ItemLink__r.Kikaku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>規格</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusBeginTime__c</fullName>
        <label>状況開始時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状況</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機</label>
        <referenceTo>UnitBody__c</referenceTo>
        <relationshipLabel>構成品</relationshipLabel>
        <relationshipName>Component</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>構成品</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>構成品</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>